--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "8129468158:AAHujStmCgy-w0cVs9GEMJeqIhPDliV1blQ"                              # Require restart after changing it while bot running
+OWNER_ID = "6742022802"                               # Require restart after changing it while bot running
+TELEGRAM_API = "22419004"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "34982b52c4a83c2af3ce8f4fe12fe4e1"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
