--- a/config_sample.env
+++ b/config_sample.env
@@ -34,8 +34,8 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # JDownloader
-JD_EMAIL = ""
-JD_PASS = ""
+JD_EMAIL = "dolabani46@gmail.com"
+JD_PASS = "@Labani123"
 # Sabnzbd
 USENET_SERVERS = "[{'name': 'main', 'host': '', 'port': 563, 'timeout': 60, 'username': '', 'password': '', 'connections': 8, 'ssl': 1, 'ssl_verify': 2, 'ssl_ciphers': '', 'enable': 1, 'required': 0, 'optional': 0, 'retention': 0, 'send_group': 0, 'priority': 0}]"
 # Update
