--- a/config_sample.env
+++ b/config_sample.env
@@ -39,8 +39,8 @@ JD_PASS = "@Labani123"
 # Sabnzbd
 USENET_SERVERS = "[{'name': 'main', 'host': '', 'port': 563, 'timeout': 60, 'username': '', 'password': '', 'connections': 8, 'ssl': 1, 'ssl_verify': 2, 'ssl_ciphers': '', 'enable': 1, 'required': 0, 'optional': 0, 'retention': 0, 'send_group': 0, 'priority': 0}]"
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/zxxlbni/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "main"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
